@@ -23,6 +23,7 @@
             <li><a href="../../docs/download.html">download</a></li>
             <li><a href="../../docs/license.html">license</a></li>
             <li><h2>documentation</h2></li>
+            <li><a href="../../docs/overview.html">overview</a></li>
             <li><a class="expandedmenu" href="index.html">build loop</a>
                 <ul>
                     <li><p id="menuselected">install</p></li>
